--- a/index.html
+++ b/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>ALAJ &mdash; TROCKENBAU Oberndorf am Neckar</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
 	<meta name="description" content="ALAJ &mdash; TROCKENBAU Oberndorf am Neckar" />
 	<meta name="keywords"
 		content="ALAJ, TROCKENBAU, Oberndorf am Neckar, Lindenhof, Bösingen, Epfendorf, Bochingen, Trichtingen, Harthausen, Aistaig, Boll, " />
 	<meta name="author" content="Enver Alaj" />
 
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -62,12 +46,7 @@
 	<link rel="stylesheet" href="css/style.css">
 
 
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 </head>
 
@@ -100,31 +79,6 @@
 
 	<div id="slider" data-section="home">
 		<div class="owl-carousel owl-carousel-main owl-carousel-fullwidth">
-			<!-- You may change the background color here.  
-			<div class="item" style="background-image: url('images/trockenbauarbeiten.jpg'); 
-                         background-size: cover; 
-                         background-position: center;">
-				<div class="container" style="position: relative;">
-					<div class="row animate-box" data-animate-effect="fadeIn">
-						<div class="col-md-7 col-md-push-1 col-md-push-5 col-sm-7 col-sm-push-1 col-sm-push-5">
-							<div class="fh5co-owl-text-wrap">
-								<div class="fh5co-owl-text">
-									<h1 class="fh5co-lead ">Wir bauen Räume mit Leidenschaft</h1>
-									<h2 class="fh5co-sub-lead ">Lernen Sie unser erfahrenes Team kennen und entdecken
-										Sie, was uns im Trockenbau einzigartig macht.</h2>
-									<p class=""><a href="#" class="btn btn-primary btn-lg">Mehr erfahren</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-md-pull-7 col-sm-4 col-sm-pull-7 mobile-image">
-							<div class="mobile"><img src="images/bauarbeiter.png"
-									alt="Free HTML5 Template by FREEHTML5.co">
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div>-->
 
 			<!-- You may change the background color here. -->
 			<div class="item" style="background-image: url('images/hero1.png'); 
@@ -297,57 +251,6 @@
 		</div>
 	</div>
 
-	<!--	<div id="fh5co-our-services" data-section="services">
-		<div class="container">
-			<div class="row row-bottom-padded-sm animate-box">
-				<div class="col-md-12 section-heading text-center">
-					<h2>Our Services</h2>
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and
-								Consonantia,
-								there live the blind texts.</h3>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-
-				<div class="col-md-4">
-					<div class="box animate-box">
-						<div class="icon colored-1"><span><i class="icon-mustache"></i></span></div>
-						<h3>100% free</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts. Separated they live in Bookmarksgrove right at the coast of
-							the
-							Semantics, a large language ocean.</p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="box animate-box">
-						<div class="icon colored-4"><span><i class="icon-heart"></i></span></div>
-						<h3>Made with love</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts. Separated they live in Bookmarksgrove right at the coast of
-							the
-							Semantics, a large language ocean.</p>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="box animate-box">
-						<div class="icon colored-2"><span><i class="icon-screen-desktop"></i></span></div>
-						<h3>Fully responsive</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts. Separated they live in Bookmarksgrove right at the coast of
-							the
-							Semantics, a large language ocean.</p>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
--->
 
 	<div id="projekte" data-section="projekte">
 
@@ -584,7 +487,7 @@
 				<div class="col-md-12">
 					<p class="copyright text-center">
 						&copy;
-						<script>document.write(new Date().getFullYear());</script> Alaj Trockenbau.
+						2025 Alaj Trockenbau.
 						Alle Rechte vorbehalten.<br>
 						Enver Alaj · Schuhmarktplatz 6 · 78727 Oberndorf am Neckar
 					</p>
@@ -623,6 +526,11 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
+	<!-- Modernizr JS -->
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
 
 </body>
 
