--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 					<div class="fh5co-desc">
 						<h3>Kostenlose Erstberatung</h3>
 						<p>Wir beraten Sie unverbindlich und kostenlos vor Ort oder telefonisch – ganz nach Ihren
-							Wünschen und Anforderungen.</p>
+							Wünschen.</p>
 					</div>
 				</div>
 
