--- a/impressum.html
+++ b/impressum.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="de">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,8 @@
 	<meta name="author" content="Enver Alaj">
 
 	<link rel="shortcut icon" href="images/favicon.png">
-	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,700|Montserrat:400,700' rel='stylesheet'
+		type='text/css'>
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/simple-line-icons.css">
@@ -39,7 +41,8 @@
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html" data-nav-section="home"><span>Home</span></a></li>
-						<li><a href="index.html#leistungen" data-nav-section="leistungen"><span>Leistungen</span></a></li>
+						<li><a href="index.html#leistungen" data-nav-section="leistungen"><span>Leistungen</span></a>
+						</li>
 						<li><a href="index.html#projekte" data-nav-section="projekte"><span>Projekte</span></a></li>
 						<li><a href="index.html#features" data-nav-section="features"><span>Kontakt</span></a></li>
 					</ul>
@@ -49,49 +52,56 @@
 	</header>
 
 	<!-- IMPRESSUM -->
-	<div class="container" style="padding-top: 100px; padding-bottom: 100px;">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<h1>Impressum</h1>
+	<section id="impressum">
 
-				<p>
-					Enver Alaj<br>
-					Alaj Trockenbau<br>
-					Schuhmarktplatz 6<br>
-					78727 Oberndorf am Neckar
-				</p>
 
-				<h2>Kontakt</h2>
-				<p>
-					Telefon: <a href="tel:+4915568326599">+49 1556 8326599</a><br>
-					E-Mail: <a href="mailto:alaj-trockenbau@outlook.de">alaj-trockenbau@outlook.de</a>
-				</p>
+		<div class="container" style="padding-top: 100px; padding-bottom: 100px;">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<h1>Impressum</h1>
 
-				<h2>Unternehmensangaben</h2>
-				<p>
-					Einzelunternehmen<br>
-					Vertreten durch: Enver Alaj<br>
-					Hinweis gemäß § 19 UStG: Kleinunternehmer – kein Ausweis der Umsatzsteuer.
-				</p>
+					<p>
+						Enver Alaj<br>
+						Alaj Trockenbau<br>
+						Schuhmarktplatz 6<br>
+						78727 Oberndorf am Neckar
+					</p>
 
-				<h2>Verbraucher&shy;streit&shy;beilegung / Universal&shy;schlichtungs&shy;stelle</h2>
-				<p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
+					<h2>Kontakt</h2>
+					<p>
+						Telefon: <a href="tel:+4915568326599">+49 1556 8326599</a><br>
+						E-Mail: <a href="mailto:alaj-trockenbau@outlook.de">alaj-trockenbau@outlook.de</a>
+					</p>
 
-				<h2>Zentrale Kontaktstelle nach dem Digital Services Act (DSA)</h2>
-				<p>
-					Unsere zentrale Kontaktstelle für Nutzer und Behörden nach Art. 11, 12 DSA erreichen Sie wie folgt:
-				</p>
-				<p>
-					E-Mail: <a href="mailto:alaj-trockenbau@outlook.de">alaj-trockenbau@outlook.de</a><br>
-					Die für den Kontakt zur Verfügung stehenden Sprachen sind: Deutsch, Englisch.
-				</p>
+					<h2>Unternehmensangaben</h2>
+					<p>
+						Einzelunternehmen<br>
+						Vertreten durch: Enver Alaj<br>
+						Hinweis gemäß § 19 UStG: Kleinunternehmer – kein Ausweis der Umsatzsteuer.
+					</p>
 
-				<p style="margin-top: 30px; font-size: 0.9em;">
-					Quelle: <a href="https://www.e-recht24.de" target="_blank" rel="noopener noreferrer">https://www.e-recht24.de</a>
-				</p>
+					<h2>Verbraucher&shy;streit&shy;beilegung / Universal&shy;schlichtungs&shy;stelle</h2>
+					<p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer
+						Verbraucherschlichtungsstelle teilzunehmen.</p>
+
+					<h2>Zentrale Kontaktstelle nach dem Digital Services Act (DSA)</h2>
+					<p>
+						Unsere zentrale Kontaktstelle für Nutzer und Behörden nach Art. 11, 12 DSA erreichen Sie wie
+						folgt:
+					</p>
+					<p>
+						E-Mail: <a href="mailto:alaj-trockenbau@outlook.de">alaj-trockenbau@outlook.de</a><br>
+						Die für den Kontakt zur Verfügung stehenden Sprachen sind: Deutsch, Englisch.
+					</p>
+
+					<p style="margin-top: 30px; font-size: 0.9em;">
+						Quelle: <a href="https://www.e-recht24.de" target="_blank"
+							rel="noopener noreferrer">https://www.e-recht24.de</a>
+					</p>
+				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
 	<!-- FOOTER -->
 	<footer id="footer" role="contentinfo">
@@ -100,7 +110,7 @@
 				<div class="col-md-12">
 					<p class="copyright text-center">
 						&copy;
-						<script>document.write(new Date().getFullYear());</script> Alaj Trockenbau.
+						2025 Alaj Trockenbau.
 						Alle Rechte vorbehalten.<br>
 						Enver Alaj · Schuhmarktplatz 6 · 78727 Oberndorf am Neckar
 					</p>
@@ -133,4 +143,5 @@
 	<script src="js/main.js"></script>
 
 </body>
+
 </html>
